--- a/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/localization/steamtours_english.txt
+++ b/tools/steamvr_environments/game/steamtours/pak02_dir/panorama/localization/steamtours_english.txt
@@ -209,8 +209,48 @@
 		"VR_PhysicsProp_WrathOfLokiHammer_Desc"		"A hammer fit for a god.\n\nUnlocked by playing Wrath of Loki VR Adventure."
 		"VR_PhysicsProp_DoomVfrMarineFigurine"		"Doom Marine"
 		"VR_PhysicsProp_DoomVfrMarineFigurine_Desc"	"The Scourge of Hell himself, in fun-sized collectible form.\n\nUnlocked by playing DOOM VFR."
-		
-		
+		"VR_PhysicsProp_Fallout4BobbleHeadAgility"				"Vault Boy: Agility"
+		"VR_PhysicsProp_Fallout4BobbleHeadAgility_Desc"			"Never be afraid to dodge the sensitive issues.\n\nUnlocked by playing Fallout 4 VR."
+		"VR_PhysicsProp_Fallout4BobbleHeadBarter"				"Vault Boy: Barter"
+		"VR_PhysicsProp_Fallout4BobbleHeadBarter_Desc"			"Never forget to walk away with more than you've brought.\n\nUnlocked by playing Fallout 4 VR."
+		"VR_PhysicsProp_Fallout4BobbleHeadBigGuns"				"Vault Boy: Big Guns"
+		"VR_PhysicsProp_Fallout4BobbleHeadBigGuns_Desc"			"The best way to win an argument is to be the loudest.\n\nUnlocked by playing Fallout 4 VR."
+		"VR_PhysicsProp_Fallout4BobbleHeadCharisma"				"Vault Boy: Charisma"
+		"VR_PhysicsProp_Fallout4BobbleHeadCharisma_Desc"		"Nothing says pizzazz like a winning smile.\n\nUnlocked by playing Fallout 4 VR."
+		"VR_PhysicsProp_Fallout4BobbleHeadEndurance"			"Vault Boy: Endurance"
+		"VR_PhysicsProp_Fallout4BobbleHeadEndurance_Desc"		"Always be ready to take one for the team.\n\nUnlocked by playing Fallout 4 VR."
+		"VR_PhysicsProp_Fallout4BobbleHeadEnergyWeapons"		"Vault Boy: Energy Weapons"
+		"VR_PhysicsProp_Fallout4BobbleHeadEnergyWeapons_Desc"	"Arrive at peaceful resolutions by using superior firepower.\n\nUnlocked by playing Fallout 4 VR."
+		"VR_PhysicsProp_Fallout4BobbleHeadExplosives"			"Vault Boy: Explosives"
+		"VR_PhysicsProp_Fallout4BobbleHeadExplosives_Desc"		"The best way to solve a problem is to make it go away.\n\nUnlocked by playing Fallout 4 VR."
+		"VR_PhysicsProp_Fallout4BobbleHeadIntelligence"			"Vault Boy: Intelligence"
+		"VR_PhysicsProp_Fallout4BobbleHeadIntelligence_Desc"	"It takes the smartest individuals to realize there's always more to learn.\n\nUnlocked by playing Fallout 4 VR."
+		"VR_PhysicsProp_Fallout4BobbleHeadLockpicking"			"Vault Boy: Lockpicking"
+		"VR_PhysicsProp_Fallout4BobbleHeadLockpicking_Desc"		"Always strive for the unobtainable.\n\nUnlocked by playing Fallout 4 VR."
+		"VR_PhysicsProp_Fallout4BobbleHeadLuck"					"Vault Boy: Luck"
+		"VR_PhysicsProp_Fallout4BobbleHeadLuck_Desc"			"There's only one way to give 110%.\n\nUnlocked by playing Fallout 4 VR."
+		"VR_PhysicsProp_Fallout4BobbleHeadMedicine"				"Vault Boy: Medicine"
+		"VR_PhysicsProp_Fallout4BobbleHeadMedicine_Desc"		"The smart man knows a bandage only hides his wounds.\n\nUnlocked by playing Fallout 4 VR."
+		"VR_PhysicsProp_Fallout4BobbleHeadMelee"				"Vault Boy: Melee"
+		"VR_PhysicsProp_Fallout4BobbleHeadMelee_Desc"			"It's important to do business up close and personal.\n\nUnlocked by playing Fallout 4 VR."
+		"VR_PhysicsProp_Fallout4BobbleHeadPerception"			"Vault Boy: Perception"
+		"VR_PhysicsProp_Fallout4BobbleHeadPerception_Desc"		"Only through observation will you perceive weakness.\n\nUnlocked by playing Fallout 4 VR."
+		"VR_PhysicsProp_Fallout4BobbleHeadRepair"				"Vault Boy: Repair"
+		"VR_PhysicsProp_Fallout4BobbleHeadRepair_Desc"			"Why go down with the ship when you can try to fix it?\n\nUnlocked by playing Fallout 4 VR."
+		"VR_PhysicsProp_Fallout4BobbleHeadScience"				"Vault Boy: Science"
+		"VR_PhysicsProp_Fallout4BobbleHeadScience_Desc"			"Always be prepared to explain the hows and the whys.\n\nUnlocked by playing Fallout 4 VR."
+		"VR_PhysicsProp_Fallout4BobbleHeadSmallGuns"			"Vault Boy: Small Guns"
+		"VR_PhysicsProp_Fallout4BobbleHeadSmallGuns_Desc"		"Because it's easier to have courage from a safe distance away.\n\nUnlocked by playing Fallout 4 VR."
+		"VR_PhysicsProp_Fallout4BobbleHeadSneak"				"Vault Boy: Sneak"
+		"VR_PhysicsProp_Fallout4BobbleHeadSneak_Desc"			"The safest distance between two points is a shadowy line.\n\nUnlocked by playing Fallout 4 VR."
+		"VR_PhysicsProp_Fallout4BobbleHeadSpeech"				"Vault Boy: Speech"
+		"VR_PhysicsProp_Fallout4BobbleHeadSpeech_Desc"			"Let your words be your weapon.\n\nUnlocked by playing Fallout 4 VR."
+		"VR_PhysicsProp_Fallout4BobbleHeadStrength"				"Vault Boy: Strength"
+		"VR_PhysicsProp_Fallout4BobbleHeadStrength_Desc"		"It's essential to give your arguments impact.\n\nUnlocked by playing Fallout 4 VR."
+		"VR_PhysicsProp_Fallout4BobbleHeadUnarmed"				"Vault Boy: Unarmed"
+		"VR_PhysicsProp_Fallout4BobbleHeadUnarmed_Desc"			"When words fail, there's always fists.\n\nUnlocked by playing Fallout 4 VR."
+
+	
 		// furniture
 		"VR_Furniture_Book001"						"Book"
 		"VR_Furniture_Book001_Desc"					"A book from the Lazy Panda Publishing Company."
